# mostsimilar

./: AGENTS.md  CMakeLists.txt  LICENSE  README.md  optimization-notes.md
MatchText/: BlockingQueue.h  MatchText.cpp  MostSimilar.cpp  Statistics.cpp  Statistics.h  Utils.cpp  Utils.h
cmake/: RunCpack.cmake
tests/: StatisticsTests.cpp
